# brave-core

./: .gitattributes  .gitignore  BUILD.gn  Jenkinsfile  package-lock.json  package.json
.github/: CODEOWNERS
android/java/: apk_for_test.flags
app/: brave_command_ids.h  brave_command_line_helper_unittest.cc  brave_generated_resources.grd  brave_settings_strings.grdp
browser/: about_flags.cc  brave_browser_process.h  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_content_browser_client.h  brave_features_internal_names.h  brave_local_state_prefs.cc  brave_profile_prefs.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/brave_ads/: ads_service_browsertest.cc  ads_service_factory.cc  ads_tab_helper.cc  ads_tab_helper.h  brave_ads_host.cc  brave_ads_host.h
browser/brave_search/: brave_search_browsertest.cc
browser/brave_stats/: brave_stats_updater_params.cc  brave_stats_updater_unittest.cc
browser/brave_vpn/: brave_vpn_service_factory.cc
browser/brave_wallet/: brave_wallet_service_unittest.cc  keyring_service_unittest.cc  solana_provider_browsertest.cc  solana_provider_impl_unittest.cc
browser/ipfs/: ipfs_tab_helper.cc  ipfs_tab_helper.h  ipfs_tab_helper_unittest.cc
browser/net/: BUILD.gn  brave_ads_status_header_network_delegate_helper.cc  brave_ads_status_header_network_delegate_helper_unittest.cc  brave_request_handler.cc
browser/request_otr/: request_otr_page_browsertest.cc  request_otr_service_factory.cc  request_otr_service_factory.h  sources.gni
browser/sync/: brave_sync_service_impl_delegate.cc
browser/ui/: BUILD.gn  brave_browser_command_controller.cc  brave_shields_data_controller.cc  brave_shields_data_controller.h
components/adblock_rust_ffi/: Cargo.toml
components/api_request_helper/: api_request_helper.cc  api_request_helper.h  api_request_helper_unittest.cc
components/brave_adblock_ui/: brave_adblock.tsx
components/brave_federated/: BUILD.gn  brave_federated_service.cc  features.h
components/brave_new_tab_ui/: apiEventsToStore.ts  binance-utils.ts  brave_new_tab.tsx
components/brave_vpn/: BUILD.gn  DEPS  brave_vpn_os_connection_api_win.cc  brave_vpn_os_connection_api_win.h  brave_vpn_utils.cc  features.cc  features.h  pref_names.h  utils_win.cc  utils_win.h
components/brave_welcome_ui/: brave_welcome.tsx  store.ts  welcomeUtils.ts
components/common/: AsyncActionHandler.ts  Background.ts  BraveCoreThemeProvider.tsx  classnames.test.ts  classnames.ts  debounce.ts  defaultTrustedTypesPolicy.ts  events.ts  hashStrings.ts  isValidEmailAddress.ts  loadTimeData.js  locale.ts  mojomUtils.ts  privateCDN.ts  settingsPrivate.ts  throttle.ts  useVisible.ts
components/constants/: pref_names.cc  pref_names.h  url_constants.cc  url_constants.h  webui_url_constants.cc  webui_url_constants.h
components/definitions/: chrome_brave_theme.d.ts  chrome_brave_wallet.d.ts  chrome_ipfs.d.ts  chromel.d.ts  global.d.ts  ipfs.d.ts  newTab.d.ts  non-js-loaders.d.ts  playlist.d.ts  rewards.d.ts  rewardsExtensions.d.ts  rewardsInternals.d.ts  torInternals.d.ts  webtorrent.d.ts  welcome.d.ts
components/google_sign_in/browser/: BUILD.gn  DEPS  google_sign_in_throttle.cc  google_sign_in_throttle.h
components/google_sign_in/common/: BUILD.gn  DEPS  features.cc  features.h  google_sign_in_util.cc  google_sign_in_util.h
components/ipfs/: ipfs_json_parser.cc  ipfs_json_parser.h  ipfs_json_parser_unittest.cc  ipfs_service.cc  ipfs_service.h  ipfs_utils.cc
components/ipfs_ui/: ipfs.tsx  style.ts
components/misc_metrics/: menu_metrics.cc  menu_metrics.h  menu_metrics_unittest.cc  pref_names.cc  (+1 more)
components/request_otr/browser/: BUILD.gn  DEPS  request_otr_component_installer.cc  request_otr_component_installer.h  request_otr_controller_client.cc  request_otr_controller_client.h  request_otr_navigation_throttle.cc  request_otr_navigation_throttle.h  request_otr_page.cc  request_otr_page.h  request_otr_rule.cc  request_otr_rule.h  request_otr_service.cc  request_otr_service.h  request_otr_tab_storage.cc  request_otr_tab_storage.h
flatpak/: com.brave.Browser.yaml
patches/: chrome-VERSION.patch  chrome-browser-history-history_tab_helper.cc.patch  chrome-browser-resources-settings-site_settings-category_default_setting.ts.patch  chrome-browser-resources-settings-site_settings-constants.ts.patch  chrome-browser-sync-sync_ui_util.cc.patch  chrome-browser-ui-webui-settings-people_handler.cc.patch  chrome-installer-mini_installer-chrome.release.patch  components-sync-driver-sync_service_impl.cc.patch  components-sync-driver-sync_user_settings_impl.cc.patch  components-sync_device_info-device_info_sync_bridge.cc.patch  components-sync_device_info-local_device_info_provider_impl.cc.patch
script/: download_rust_deps.py  generate_licenses.py
test/: BUILD.gn
vpn/: BUILD.gn  branding.gni  constants.cc  constants.h  main.cc  service_main.cc  service_main.h  vpn.rc  vpn.ver  vpn_dns_handler.cc  vpn_dns_handler.h  vpn_service.cc  vpn_service.h  vpn_service_idl.idl  vpn_utils.cc  vpn_utils.h
(+1471 files in other folders)
