brave_browser_request_otr_sources = [
  "//brave/browser/request_otr/request_otr_service_factory.cc",
  "//brave/browser/request_otr/request_otr_service_factory.h",
]

brave_browser_request_otr_deps = [
  "//base",
  "//brave/components/request_otr/browser",
  "//brave/components/request_otr/common",
  "//brave/extensions:common",
  "//chrome/common",
  "//components/keyed_service/content",
]
