[package]
name = "adblock-ffi"
version = "0.1.0"
authors = ["Brian R. Bondy <netzen@gmail.com>"]
edition = "2018"

[dependencies]
adblock = { git="https://github.com/brave/adblock-rust", rev="9d3e0ed2e2de888a7037c7512039c41e7a106d0a", default-features = false, features = ["full-regex-handling", "object-pooling", "unsync-regex-caching"] }
serde_json = "1.0"
libc = "0.2"

[lib]
crate-type = [
    "rlib",
]
name = "adblock"

[features]
cbindgen = []
ios = ["adblock/content-blocking"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
